[package]
name = "clatd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
etherparse = "0.14"
nix = { version = "0.28", features = ["ioctl"] }
rtnetlink = "0.14"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
bindgen = "0.69"
